[package]
name = "easy-csv"
version = "0.3.2"
authors = ["Tyler Hardin <th020394@gmail.com>"]

description = "Easily parse structs from CSVs."
license = "BSD-2-Clause"
repository = "https://github.com/Tyler-Hardin/easy-csv"

[lib]
name = "easy_csv"

[dependencies]
easy-csv-derive = "0.3.2"
csv = "0.15"
