[package]
name = "easy-csv-derive"
version = "0.3.2"
authors = ["Tyler Hardin <th020394@gmail.com>"]

description = "Procedural macro crate for easy-csv."
license = "BSD-2-Clause"
repository = "https://github.com/Tyler-Hardin/easy-csv"

[lib]
name = "easy_csv_derive"
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

